objects/ProgramAreaDocument__c.object
<CustomObject>
    <fields>
        <fullName>Document__c</fullName>
        <description>The document associated with the program area</description>
        <inlineHelpText>The document associated with the program area</inlineHelpText>
        <label>Document</label>
        <referenceTo>RepositoryDocument__c</referenceTo>
        <relationshipName>ProgramAreaDocuments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProgramArea__c</fullName>
        <description>The program period described by the document</description>
        <inlineHelpText>The program period described by the document</inlineHelpText>
        <label>Program Period</label>
        <referenceTo>ProgramPeriod__c</referenceTo>
        <relationshipName>ProgramAreaDocuments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProgramPeriodDocumenEID__c</fullName>
        <description>The Enterprise ID for this Program Period Document.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Program Period Document.</inlineHelpText>
        <label>Program Period Document EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Program Period Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Program Period Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Period Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>